Modified group activity code

--- a/Group Activity/NLP Group Activity.ipynb
+++ b/Group Activity/NLP Group Activity.ipynb
@@ -809,6 +809,232 @@
     "\n",
     "tfidf"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>words</th>\n",
+       "      <th>Six Years And Counting...</th>\n",
+       "      <th>What Dreams May Come</th>\n",
+       "      <th>Getting Saucy About Food</th>\n",
+       "      <th>Train to Nowhere</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000014</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1990s</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>822</th>\n",
+       "      <td>year</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>0.000003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>823</th>\n",
+       "      <td>yes</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>824</th>\n",
+       "      <td>yet</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>825</th>\n",
+       "      <td>york</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>826</th>\n",
+       "      <td>zacharias</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>827 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         words  Six Years And Counting...  What Dreams May Come  \\\n",
+       "0            0                   0.000000              0.000000   \n",
+       "1           10                   0.000000              0.000000   \n",
+       "2           13                   0.000000              0.000000   \n",
+       "3        1990s                   0.000000              0.000000   \n",
+       "4            2                   0.000000              0.000000   \n",
+       "..         ...                        ...                   ...   \n",
+       "822       year                   0.000007              0.000007   \n",
+       "823        yes                   0.000000              0.000000   \n",
+       "824        yet                   0.000000              0.000000   \n",
+       "825       york                   0.000005              0.000005   \n",
+       "826  zacharias                   0.000000              0.000000   \n",
+       "\n",
+       "     Getting Saucy About Food  Train to Nowhere  \n",
+       "0                    0.000007          0.000000  \n",
+       "1                    0.000014          0.000000  \n",
+       "2                    0.000000          0.000008  \n",
+       "3                    0.000000          0.000008  \n",
+       "4                    0.000007          0.000000  \n",
+       "..                        ...               ...  \n",
+       "822                  0.000003          0.000003  \n",
+       "823                  0.000007          0.000000  \n",
+       "824                  0.000000          0.000008  \n",
+       "825                  0.000000          0.000000  \n",
+       "826                  0.000007          0.000000  \n",
+       "\n",
+       "[827 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Normalization of TF-IDF\n",
+    "\n",
+    "normalize = pd.DataFrame()\n",
+    "normalize['words'] = allWords\n",
+    "\n",
+    "normalize['Six Years And Counting...'] = tfidf['Six Years And Counting...'] / len(allWords)\n",
+    "normalize['What Dreams May Come'] = tfidf['What Dreams May Come'] / len(allWords)\n",
+    "normalize['Getting Saucy About Food'] = tfidf['Getting Saucy About Food'] / len(allWords)\n",
+    "normalize['Train to Nowhere'] = tfidf['Train to Nowhere'] / len(allWords)\n",
+    "\n",
+    "normalize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Coscine Similarity\n",
+    "def coscine(doc1, doc2):\n",
+    "    c = 0\n",
+    "    for i in range(len(allWords)):\n",
+    "        c += tfidf[doc1][i] * tfidf[doc2][i]\n",
+    "        \n",
+    "    c /= float((sum(tfidf[doc1]) * sum(tfidf[doc2])) ** 0.5)\n",
+    "    \n",
+    "    return c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "articleName = ['Six Years And Counting...', 'What Dreams May Come', 'Getting Saucy About Food', 'Train to Nowhere']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coscine similarity between Six Years And Counting... and What Dreams May Come : 0.0005081784537435915\n",
+      "Coscine similarity between Six Years And Counting... and Getting Saucy About Food : 0.0003384101986182904\n",
+      "Coscine similarity between Six Years And Counting... and Train to Nowhere : 0.0003846404557002397\n",
+      "Coscine similarity between What Dreams May Come and Getting Saucy About Food : 0.00048043999520051264\n",
+      "Coscine similarity between What Dreams May Come and Train to Nowhere : 0.00036517395023833756\n",
+      "Coscine similarity between Getting Saucy About Food and Train to Nowhere : 0.000675679386666053\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(articleName)):\n",
+    "    for j in range(i + 1, len(articleName)):\n",
+    "        print('Coscine similarity between', articleName[i], 'and', articleName[j], ':', coscine(articleName[i],articleName[j]))"
+   ]
   }
  ],
  "metadata": {
